--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="main_container">
         <div class="section1">
             <div class="s1_title__p1">
-                <img src="tripadvisor_logo.png" alt="Tripadvisor-Logo">
+                <img src="img/tripadvisor_logo.png" alt="Tripadvisor-Logo">
             </div>
             <div class="s1_title__p2">
                 <p>Discover</p>
@@ -32,7 +32,7 @@
                 <p>More</p>
             </div>
             <div class="s1_title__p3">
-                <img src="earth-grid.png " alt="Choose your Fav Location">
+                <img src="img/earth-grid.png " alt="Choose your Fav Location">
                 <h3> | CNY</h3>
             </div>
             <div class="s1_title__p4">
@@ -46,11 +46,11 @@
                 </div>
             </div>
             <div class="s2_des__p2">
-                <h4 class="s2_des__a1"><img src="home.png" alt="search">Search All</h4>
-                <h4 class="s2_des__a2"> <img src="double-bed.png" alt="Hotels"> Hotels</h4>
-                <h4 class="s2_des__a3"> <img src="ticket.png" alt="Things to Do"> Things to Do</h4>
-                <h4 class="s2_des__a4"> <img src="fork.png" alt="Restaurant"> Restaurants</h4>
-                <h4 class="s2_des__a5"> <img src="key.png" alt="Holiday Homes"> Holiday Homes</h4>
+                <h4 class="s2_des__a1"><img src="img/home.png" alt="search">Search All</h4>
+                <h4 class="s2_des__a2"> <img src="img/double-bed.png" alt="Hotels"> Hotels</h4>
+                <h4 class="s2_des__a3"> <img src="img/ticket.png" alt="Things to Do"> Things to Do</h4>
+                <h4 class="s2_des__a4"> <img src="img/fork.png" alt="Restaurant"> Restaurants</h4>
+                <h4 class="s2_des__a5"> <img src="img/key.png" alt="Holiday Homes"> Holiday Homes</h4>
             </div>
         </div>
         <div class="section3">
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="section4">
-            <img src="Screenshot (2).png" alt="Trip with AI">
+            <img src="img/Screenshot (2).png" alt="Trip with AI">
             <div class="s4_des">
                 <h3>Where to eat, play and stay in the Cape Winelands</h3>
                 <p>Jobs fill your pocket, but adventures fill your soul</p>
@@ -71,10 +71,10 @@
             <p>Travellers' Choice Awards of the Best Beaches</p>
         </div>
         <div class="section6">
-            <img src="asian.jpg" alt="Asia beaches">
-            <img src="caribbean beaches.jpg" alt="Carbian beaches">
-            <img src="european beaches.jpg" alt="European beaches">
-            <img src="south pacific beaches.jpg" alt="South pacific beaches">
+            <img src="img/asian.jpg" alt="Asia beaches">
+            <img src="img/caribbean beaches.jpg" alt="Carbian beaches">
+            <img src="img/european beaches.jpg" alt="European beaches">
+            <img src="img/south pacific beaches.jpg" alt="South pacific beaches">
             <h2 class="s6_img1">Asia Beaches</h2>
             <h2 class="s6_img2">Caribbean Beaches</h2>
             <h2 class="s6_img3">European Beaches </h2>
@@ -86,10 +86,10 @@
         </div>
         <div class="section8">
             <div class="s8_images">
-                <img src="aayiram-kaal-mandapam.jpg" alt="aayiram-kaal-mandapam">
-                <img src="thirumalai nayakar mahal.jpg" alt="thirumalai nayakar mahal">
-                <img src="koodal azhagar temple.jpg" alt="koodal azhagar temple">
-                <img src="private tour of madurai city with gude for a cultural immersion.jpg" alt="Temples">
+                <img src="img/aayiram-kaal-mandapam.jpg" alt="aayiram-kaal-mandapam">
+                <img src="img/thirumalai nayakar mahal.jpg" alt="thirumalai nayakar mahal">
+                <img src="img/koodal azhagar temple.jpg" alt="koodal azhagar temple">
+                <img src="img/private tour of madurai city with gude for a cultural immersion.jpg" alt="Temples">
             </div>
             <h6 class="s8_img1">Aayram-Kaal-Mandapam </h6>
             <h6 class="s8_img2">ThirumalaiNayakar Mahal </h6>
@@ -117,32 +117,32 @@
         </div>
         <div class="section9">
             <div class="section9_one">
-                <img src="aayiram-kaal-mandapam.jpg">
+                <img src="img/aayiram-kaal-mandapam.jpg">
                 <h3>Aayram-Kaal-Mandapam</h3>
                 <p>250$ for per Adult</p>
                 <p>4.2 ⭐⭐⭐⭐</p>
             </div>
             <div class="section9_two">
-                <img src="thirumalai nayakar mahal.jpg">
+                <img src="img/thirumalai nayakar mahal.jpg">
                 <h3>Thirumalai-Nayakar Mahal</h3>
                 <p>250$ for per Adult</p>
                 <p>4.2 ⭐⭐⭐⭐</p>
             </div>
             <div class="section9_three">
-                <img src="koodal azhagar temple.jpg">
+                <img src="img/koodal azhagar temple.jpg">
                 <h3>Koodal-Azhagar Temple</h3>
                 <p>250$ for per Adult</p>
                 <p>4.2 ⭐⭐⭐⭐</p>
             </div>
             <div class="section9_four">
-                <img src="private tour of madurai city with gude for a cultural immersion.jpg">
+                <img src="img/private tour of madurai city with gude for a cultural immersion.jpg">
                 <h3>Private tour of Madurai city with guide for a culture immersion</h3>
                 <p>250$ for per Adult</p>
                 <p>4.2 ⭐⭐⭐⭐</p>
             </div>
         </div>
         <div class="section10">
-            <img src="home screeN.PNG" alt="home">
+            <img src="img/home screeN.PNG" alt="home">
         </div>
         <div class="section11">
             <div class="section11_topic1">
@@ -182,7 +182,7 @@
             </div>
         </div>
         <div class="section12_topic1">
-            <img src="Tripadvisor_logoset_solid_green.svg" alt="LOgo">
+            <img src="img/Tripadvisor_logoset_solid_green.svg" alt="LOgo">
             <p class="section12_p">&copy; 2024 Tripadvisor LLC All rights reserved</p>
             <div class="section12_topic2">
                 <h6>Terms of Use</h6>
